<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".asset.AssetsPhotoActivity">

    <TextView
        android:id="@+id/asset_image_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="Asset Image"
        android:gravity="center"
        android:textSize="45sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <ImageView
        android:id="@+id/logo_app_asset"
        android:layout_width="176dp"
        android:layout_height="172dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asset_night" />

    <Button
        android:id="@+id/button1_photo_assets"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/button_asset_list"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app_asset" />

    <Button
        android:id="@+id/button2_photo_assets"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:visibility="gone"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_element_list"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1_photo_assets" />

    <Button
        android:id="@+id/button_drop_image"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_drop_picture"
        android:textColor="@color/white"
        app:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_capture_image"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_take_picture"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_drop_image" />

    <Button
        android:id="@+id/button_upload_image"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_upload_picture"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_capture_image" />

    <Button
        android:id="@+id/button_next_photo"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="80dp"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:backgroundTint="@color/blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_back_photo"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="80dp"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:backgroundTint="@color/blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_upload_image"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/button1_photo_assets"
        app:layout_constraintTop_toBottomOf="@+id/asset_image_text"
        app:layout_constraintVertical_bias="0.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:background="#F8F8FF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerView_Gallery_Images"
                android:background="@drawable/asset_background"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbarStyle="outsideInset"
                android:scrollbars="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>