<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".asset.AssetsActivity">

    <TextView
        android:id="@+id/asset_list_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="Assets List"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2_assets"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewStub
        android:id="@+id/emptyStateLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="150dp"
        android:layout_gravity="center"
        android:visibility="gone"
        android:layout="@layout/content_empty_state_layout"
        app:layout_constraintBottom_toTopOf="@+id/button1_assets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2_assets"
        app:layout_constraintTop_toBottomOf="@+id/asset_list_text" />

    <ImageView
        android:id="@+id/logo_app_asset"
        android:visibility="gone"
        android:layout_width="176dp"
        android:layout_height="172dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/asset_night" />

    <Button
        android:id="@+id/button1_assets"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/button_new_asset"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button2_assets"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/button_asset_list"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo_app_asset" />

        <Button
            android:id="@+id/button3_assets"
            android:visibility="gone"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_element_list"
            android:textColor="@color/white"
            app:backgroundTint="@color/green_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2_assets" />

        <Button
            android:id="@+id/button4_assets"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/button_export"
            android:textColor="@color/white"
            app:backgroundTint="@color/yellow_button"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button3_assets" />

        <Button
            android:id="@+id/button_next_asset_description"
            android:layout_width="200dp"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:paddingStart="4dp"
            android:paddingEnd="4dp"
            android:visibility="gone"
            app:backgroundTint="@color/blue_button"
            app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
            app:iconGravity="textStart"
            app:iconPadding="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button1_assets" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="200dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/button1_assets"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button2_assets"
        app:layout_constraintTop_toBottomOf="@+id/asset_list_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/assetsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/asset_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_asset_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layoutGoogleMap"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="32dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button1_assets"
        app:layout_constraintStart_toEndOf="@+id/button4_assets"
        app:layout_constraintTop_toBottomOf="@+id/scrollView2" />

    <fragment
        android:id="@+id/google_map_asset"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="@+id/layoutGoogleMap"
        app:layout_constraintEnd_toEndOf="@+id/layoutGoogleMap"
        app:layout_constraintStart_toStartOf="@+id/layoutGoogleMap"
        app:layout_constraintTop_toTopOf="@+id/layoutGoogleMap" />

</androidx.constraintlayout.widget.ConstraintLayout>