<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".requirement.RequirementsListActivity">

    <TextView
        android:id="@+id/requirement_list_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="Window/ Requirement List"
        android:textColor="@color/black"
        android:textSize="45sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_assetList_requirement"
        app:layout_constraintTop_toTopOf="parent" />

    <ViewStub
        android:id="@+id/emptyStateLayoutRequirementList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout="@layout/content_empty_state_layout"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_assetList_requirement"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:text="@string/button_asset_list"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/requirement_list_text" />

    <Button
        android:id="@+id/button_requirement_elementList"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/button_element_list"
        android:textColor="@color/white"
        app:backgroundTint="@color/green_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_assetList_requirement" />

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toTopOf="@+id/button_new_requirement"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_requirement_elementList"
        app:layout_constraintTop_toBottomOf="@+id/requirement_list_text">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/requirementGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/requirement_rv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:listitem="@layout/item_requirement_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <Button
        android:id="@+id/button_new_requirement"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="128dp"
        android:text="@string/button_new_asset"
        android:textColor="@color/white"
        app:backgroundTint="@color/blue_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/button_next_requirement"
        android:visibility="gone"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginEnd="16dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:backgroundTint="@color/blue_button"
        app:icon="@drawable/ic_baseline_arrow_forward_ios_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_new_requirement" />

    <Button
        android:id="@+id/button_back_asset_requirement"
        android:layout_width="200dp"
        android:layout_height="80dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="56dp"
        android:paddingStart="4dp"
        android:paddingEnd="4dp"
        app:backgroundTint="@color/blue_button"
        app:icon="@drawable/ic_baseline_arrow_back_ios_24"
        app:iconGravity="textStart"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>